force-app/main/default/objects/Payment/fields/Card_Last_Four_Digits__c.field-meta.xml
<CustomField>
    <fullName>Card_Last_Four_Digits__c</fullName>
    <label>Card Last Four Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>