force-app/main/default/objects/Payment/fields/Masked_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Masked_Card_Number__c</fullName>
    <label>Masked Card Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>