force-app/main/default/objects/Payment/fields/Payment_Gateway_Token__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Token__c</fullName>
    <label>Payment Gateway Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>